---------------------------------------------------------------------------------------------------
Version: 2.2.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.4
Date: 2025-07-04
  Changes:
    - Planets in orbit around hidden locations are no longer excluded from the algorithm, since they are generally otherwise inaccessible.
    - Routes from hidden planets are no longer preserved in the algorithm, these routes are now cleaned up.
    - The logic around hidden planets now runs in data-final-fixes.lua.
---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: 2025-06-29
  Changes:
    - Fixed the changelog.
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2025-06-29
  Changes:
    - No changes! Yours truly hit upload by mistake.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-06-29
  Bugfixes:
    - Attempted fix for a rare startup crash.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-06-12
  Changes:
    - Reverted the triangle inequality filtering threshold from 5% to 0% as this was found to remove too many space routes.
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2025-06-11
  Changes:
    - Connections are flipped back-to-front if that would make the PlanetsLib tiers in the direction of the route increasing. (For example, Nauvis–Aquilo is now preferred to Aquilo–Nauvis.)
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2025-06-11
  Changes: