@@ -2,6 +2,7 @@
 Version: 2.2.5
 Date: ????
   Changes:
+    - (No functionality change) This mod now reads tier values from PlanetsLibTiers rather than PlanetsLib.
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.4
 Date: 2025-07-04
